ingress/apisix/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rooster-ui
  namespace: identity-stage
  annotations:
    k8s.apisix.apache.org/http-to-https: "false"
    k8s.apisix.apache.org/plugin-config-name: "real-ip-from-header"
spec:
  ingressClassName: apisix
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rooster-ui-stage
            port:
              number: 80
# SVC: admin-api @ identity-stage
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-api
  namespace: identity-stage
  annotations:
    k8s.apisix.apache.org/http-to-https: "false"
    k8s.apisix.apache.org/plugin-config-name: "rate-limit"
    k8s.apisix.apache.org/upstream-scheme: "http"
    k8s.apisix.apache.org/use-regex: "true"
    k8s.apisix.apache.org/enable-websocket: "false"
spec:
  ingressClassName: apisix
  rules:
  - host: api.stage.steercrm.dev
    http:
      paths:
      - path: /api/v1/admin/.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: admin-api-stage
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenants-api
  namespace: identity-stage
  annotations:
    k8s.apisix.apache.org/http-to-https: "false"
    k8s.apisix.apache.org/plugin-config-name: "rate-limit"
    k8s.apisix.apache.org/upstream-scheme: "http"
    k8s.apisix.apache.org/use-regex: "true"
    k8s.apisix.apache.org/enable-websocket: "false"
spec:
  ingressClassName: apisix
  rules:
  - host: api.stage.steercrm.dev
    http:
      paths:
      - path: /tenants-api/.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: tenants-api-stage
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reputation
  namespace: infra-1-stage
  annotations:
    k8s.apisix.apache.org/http-to-https: "false"
    k8s.apisix.apache.org/upstream-scheme: "http"
    k8s.apisix.apache.org/use-regex: "true"
    k8s.apisix.apache.org/enable-websocket: "false"
spec:
  ingressClassName: apisix
  rules:
  - host: api.stage.steercrm.dev
    http:
      paths:
      - path: /api/v1/shops/.*/reputation
        pathType: ImplementationSpecific
        backend:
          service:
            name: reputation-infra-1-stage
            port:
              number: 80
# SVC: message-history-api @ infra-1-stage
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reputation
  namespace: infra-1-stage
  annotations:
    k8s.apisix.apache.org/http-to-https: "false"
    k8s.apisix.apache.org/upstream-scheme: "http"
    k8s.apisix.apache.org/use-regex: "true"
    k8s.apisix.apache.org/enable-websocket: "false"
spec:
  ingressClassName: apisix
  rules:
  - host: api.stage.steercrm.dev
    http:
      paths:
      - path: /api/v(0|[1-9]\d*)(?:\.(0|[1-9]\d*))?/shops/[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}/message-history/.*
      # - path: /api/v1/shops/.*/message-history/
        pathType: ImplementationSpecific
        backend:
          service:
            name: message-history-api-infra-1-stage
            port:
              number: 80
